--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>iSupportCause</title>
+    <title className="fnt-poppins">iSupportCause</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
